yaml-templates/ingress-5.6.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: 'php56-test.parallax.dev-https'
  namespace: 'k8s-openresty-php'
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`php56-test.parallax.dev`)
    kind: Rule
    services:
    - name: 'openresty-56-test'
      port: 80
  tls:
    secretName: 'php56-test-ssl'
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: 'php56-test.parallax.dev-http'
  namespace: 'k8s-openresty-php'
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`php56-test.parallax.dev`)
    kind: Rule
    services:
    - name: 'openresty-56-test'
      port: 80
